# AI-BE-technical-assignment

./: .env.example  Makefile  README.md  manage.py  pyproject.toml
config/: asgi.py  settings.py  wsgi.py
config/settings/: django_settings.py  env_settings.py  prompt_settings.py
core/: urls.py
core/infra/llm/: __init__.py  ai_handler.py  embedding_preprocesser.py  llm_service_adapter.py  llm_service_port.py  normalizer.py  output_parser.py  prompt_template.py  retriever.py  talent_experience_prompts.toml  test_text_splitter.py  text_splitter.py  token_handler.py  vector_store.py
core/infra/llm/tests/: test_embedding_preprocesser.py  test_normalizer.py  test_output_parser.py  test_prompt_template.py
core/management/commands/: droptables.py  embed.py  setuptables.py
core/migrations/: 0001_initial.py  0002_document_alter_company_options_and_more.py
core/models/: __init__.py  company.py  company_news.py  document.py
core/service_layer/: __init__.py  services.py
core/views/: __init__.py  talent_experience_view.py
example_datas/: setup_company_data.py  setup_company_news_data.py
